@@ -5,6 +5,9 @@ Release 5.0.4 (unreleased)
 Bug fixes
 ---------
 
+- Fix crash in matrix assembler (used by CDO) in rare cases where some
+  ranks are associated with no locla matrix rows.
+
 - Fix crash in Catalyst output when visualizing tensor data on cells.
 
 - Fix postprocessing output name of volume zone ids (appeared as boundary).
